--- a/views/booklist.ejs
+++ b/views/booklist.ejs
@@ -4,18 +4,16 @@
   <table class="table">
     <thead>
       <tr>
-        <th scope="col">Id</th>
-        <th scope="col">Author Name</th>
-        <th scope="col">Book Name</th>
+        <th scope="col">Item</th>
+        <th scope="col">Books Name</th>
         <th scope="col">Stocks</th>
       </tr>
     </thead>
     <tbody>
       <% data.forEach((el,index) => { %>
       <tr>
-        <td><%= index + 1 %> </td>
-        <td><%= el.author_name %> </td>
-        <td><%= el.book_name %> </td>
+        <td><img class="gambar" src="<%= el.img_url %>"></td>
+        <td><%= el.booksProfile %> </td>
         <td><%= el.stocks %> </td>
         <td>
           <a href="/books/buy/<%= el.id %>" class="btn btn-success"> Buy Books</a>
