--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,2 +1,5 @@
 <%- include('./partials/header') %>
+<div class="jumbotron">
+  <h2>Welcome to good-reads</h2>
+</div>
 <%- include('./partials/footer') %>
