--- a/views/home.ejs
+++ b/views/home.ejs
@@ -2,4 +2,7 @@
 <div class="jumbotron">
   <h2>Welcome to good-reads</h2>
 </div>
+<div class="container">
+  <a href="/login" class="btn btn-primary">Login</a>
+</div>
 <%- include('./partials/footer') %>
