--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -21,6 +21,9 @@
         <li class="nav-item active">
           <a class="nav-link" href="/chart">Best Seller Books</a>
         </li>
+        <li class="nav-item active">
+          <a class="nav-link" href="/account">Account</a>
+        </li>
       </ul>
     </div>
   </nav>
