--- a/views/account.ejs
+++ b/views/account.ejs
@@ -4,18 +4,25 @@
   <table class="table">
     <thead>
       <tr>
-        <th scope="col">Transaction Id</th>
-        <th scope="col">Item</th>
-        <th scope="col">Item Name</th>
+        <th scope="col">No</th>
+        <th scope="col">Book Name</th>
+        <th scope="col">Author</th>
       </tr>
     </thead>
     <tbody>
-      <tr>
-        <td></td>
-        <td></td>
-        <td></td>
-      </tr>
-    </tbody>
+      <% for(let i = 0; i < data.Books.length; i++) { %>
+        <tr>
+          <td><%= i+1 %></td>
+          <td><%= data.Books[i].book_name %> </td>
+          <td><%= data.Books[i].author_name %> </td>
+          <td>
+            <form action="/account" method="POST">
+              <button type="submit" value="" class="btn btn-success">Buy Books</button>
+            </form>
+          </td>
+        </tr>
+        <% } %>
+      </tbody>
   </table>
 </div>
 <%- include('./partials/footer') %>
